exports[`PatientReducer clear patient animal type if human category 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer returns the initial state 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient MRN 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": 4321,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient age 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "encryptedString",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient age 2`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "encryptedString",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient age 3`] = `
Object {
  "age": 1,
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient age group 1`] = `
Object {
  "age": "",
  "ageGroup": "years",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient age years 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "1.5",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient animal type 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "bird",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient category 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "animal",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient circumstance 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "New circumstance",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient location 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "Hospital",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient name 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "John Smith",
  "nameEnc": "encryptedString",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient occupation 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "Salesperson",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient poison severity score 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": 4,
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient risk assessment 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "New assessment",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient sex 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "male",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": "",
  "weightUnits": "kg",
}
`;

exports[`PatientReducer update patient weight 1`] = `
Object {
  "age": "",
  "ageGroup": "adult",
  "ageUnits": "years",
  "ageYears": "",
  "animalType": "",
  "category": "human",
  "circumstance": "",
  "gender": "",
  "locality": Object {
    "address1": "",
    "address2": "",
    "city": "",
    "country": "",
    "geometry": Object {},
    "isoCountry": "",
    "location": "",
    "name": "",
    "placeId": "",
    "postcode": "",
    "state": "",
    "telephone": "",
  },
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": "",
  "name": "",
  "nameEnc": "",
  "occupation": "unknown",
  "poisonSeverityScore": "Moderate",
  "pregnant": Object {
    "lactating": "unknown",
    "status": "unknown",
    "trimester": "unknown",
    "trimesterUnknown": null,
  },
  "riskAssessment": "Moderate Risk",
  "weight": 68,
  "weightUnits": "kg",
}
`;
